k8s/kustomize/arr/base/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: media-server
spec:
  selector:
    app: bazarr
  ports:
  - protocol: TCP
    port: 6767
    targetPort: 6767
  type: ClusterIP
